# prediction-market-engine

./: .env.example  Cargo.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  response.rs  state.rs
crates/api/src/controllers/: health.rs
crates/api/src/middleware/: cors.rs  error_handler.rs  logging.rs  mod.rs
crates/api/src/routes/: health.rs  mod.rs
crates/db/: Cargo.toml
crates/db/src/: init.rs  lib.rs  pool.rs
crates/engine/: Cargo.toml
crates/engine/src/: event.rs  lib.rs
crates/types/: Cargo.toml
crates/types/src/: event.rs
src/: main.rs
