[package]
name = "prediction-market-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
reqwest = "0.12.28"
serde = "1.0.228"
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
engine = { path = "crates/engine" }
types = { path = "crates/types" }
api = { path = "crates/api" }
db = { path = "crates/db" }
bson = "3.1.0"
chrono = "0.4.42"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.40"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres"] }
dotenv = "0.15.0"

[workspace]
members = [ 
    "crates/*"
]
