[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
chrono = "0.4.38"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres"] }
